finally got the headerPic to align correctly

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@
     box-sizing: border-box;
 }
 
-
+/*
 *{
   border: 1px solid red !important;
   margin: 0px;
-}
+}*/
 
 
 div {
@@ -42,7 +42,7 @@ div {
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  height: 30%;
+  height: 35%;
 }
 
 .headerPic {
@@ -60,8 +60,7 @@ div {
 
 .bioMessage{
   height: 20%;
-  text-align: center;
-  padding-top: 7%;
+  text-align: left;
 
 }
 
@@ -70,7 +69,7 @@ div {
   flex-wrap: wrap;
   position: relative;
   width: 100%;
-  height: 50%;
+  height: 45%;
 }
 
 .img-responsive {
@@ -86,7 +85,8 @@ div {
   height: 7.3em;
   overflow: hidden;
   border-radius: 50%;
-  bottom: 0;
+  bottom: 5%;
+  right: 55%;
 
 
 }
